--- a/src/components/styles/nftBalance.css
+++ b/src/components/styles/nftBalance.css
@@ -1,9 +1,9 @@
 .card {
-    width: 350px;
-    background-color: #efefef;
-    border: none;
-    cursor: pointer;
-    transition: all 0.5s
+  width: 350px;
+  background-color: #efefef;
+  border: none;
+  cursor: pointer;
+  transition: all 0.5s;
 }
 
 /*
@@ -12,68 +12,68 @@
 } */
 
 .image img {
-    transform: scale(1.5)
+  transform: scale(1.5);
 }
 
 .btn {
-    width: 140px;
-    border-radius: 50%
+  width: 140px;
+  border-radius: 50%;
 }
 
 .name {
-    font-size: 22px;
-    font-weight: bold
+  font-size: 22px;
+  font-weight: bold;
 }
 
 .idd {
-    font-size: 14px;
-    font-weight: 600
+  font-size: 14px;
+  font-weight: 600;
 }
 
 .idd1 {
-    font-size: 12px
+  font-size: 12px;
 }
 
 .number {
-    font-size: 22px;
-    font-weight: bold
+  font-size: 22px;
+  font-weight: bold;
 }
 
 .follow {
-    font-size: 12px;
-    font-weight: 500;
-    color: #444444
+  font-size: 12px;
+  font-weight: 500;
+  color: #444444;
 }
 
 .btn1 {
-    height: 40px;
-    width: 150px;
-    border: none;
-    background-color: #000;
-    color: #aeaeae;
-    font-size: 15px
+  height: 40px;
+  width: 150px;
+  border: none;
+  background-color: #000;
+  color: #aeaeae;
+  font-size: 15px;
 }
 
 .text span {
-    font-size: 13px;
-    color: #545454;
-    font-weight: 500
+  font-size: 13px;
+  color: #545454;
+  font-weight: 500;
 }
 
 .icons i {
-    font-size: 19px
+  font-size: 19px;
 }
 
 hr .new1 {
-    border: 1px solid
+  border: 1px solid;
 }
 
 .join {
-    font-size: 14px;
-    color: #a0a0a0;
-    font-weight: bold
+  font-size: 14px;
+  color: #a0a0a0;
+  font-weight: bold;
 }
 
 .date {
-    background-color: #ccc
+  background-color: #ccc;
 }
